refactor: replace deprecated args() with arguments()