@@ -19,18 +19,18 @@ public class SeedExtractor extends Extractor {
 
     public Optional<String> extract(MessageReceiveEvent event) {
         TranslatableComponent translatableComponent = event.getTranslatableComponent();
-        if (translatableComponent.args().isEmpty()) return Optional.empty();
+        if (translatableComponent.arguments().isEmpty()) return Optional.empty();
 
-        Component firstArg = translatableComponent.args().get(0);
+        Component firstArg = translatableComponent.arguments().getFirst().asComponent();
         return switch (firstArg) {
             // modern format with chat.square_brackets
             case TranslatableComponent chatComponent when chatComponent.key().equals("chat.square_brackets")
-                    && !chatComponent.args().isEmpty()
-                    && chatComponent.args().get(0) instanceof TextComponent seedComponent -> Optional.of(seedComponent.content());
+                    && !chatComponent.arguments().isEmpty()
+                    && chatComponent.arguments().getFirst().asComponent() instanceof TextComponent seedComponent -> Optional.of(seedComponent.content());
             // legacy format with extra
             case TextComponent textComponent when textComponent.content().equals("[")
                     && !textComponent.children().isEmpty()
-                    && textComponent.children().get(0) instanceof TextComponent seedComponent -> Optional.of(seedComponent.content());
+                    && textComponent.children().getFirst().asComponent() instanceof TextComponent seedComponent -> Optional.of(seedComponent.content());
             // legacy format
             case TextComponent textComponent when !textComponent.content().isEmpty() -> Optional.of(textComponent.content());
             default -> Optional.empty();
